add bills implementation
