# docs/swagger.json
@@ -60,6 +60,11 @@
         },
         "/auth/me": {
             "get": {
+                "security": [
+                    {
+                        "SessionAuth": []
+                    }
+                ],
                 "description": "Возвращает данные пользователя, извлечённые по sessionID из контекста",
                 "produces": [
                     "application/json"
@@ -84,11 +89,135 @@
                 }
             }
         },
+        "/bills": {
+            "get": {
+                "security": [
+                    {
+                        "SessionAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bill"
+                ],
+                "summary": "Получить список чеков ивента",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID ивента",
+                        "name": "event_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/internal_transport_http_bill.Bill"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/billsplitter-monolith_internal_utils_http.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/billsplitter-monolith_internal_utils_http.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/billsplitter-monolith_internal_utils_http.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/billsplitter-monolith_internal_utils_http.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "SessionAuth": []
+                    }
+                ],
+                "description": "Чек создается от имени пользователя из сессии",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bill"
+                ],
+                "summary": "Создает чек внутри ивента",
+                "parameters": [
+                    {
+                        "description": "Данные чека",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_transport_http_bill.CreateBillRq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/billsplitter-monolith_internal_utils_http.ResponseID"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/billsplitter-monolith_internal_utils_http.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/billsplitter-monolith_internal_utils_http.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/billsplitter-monolith_internal_utils_http.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/billsplitter-monolith_internal_utils_http.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/meets": {
             "get": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "SessionAuth": []
                     }
                 ],
                 "description": "ID юзера берется из сессии",
@@ -129,7 +258,7 @@
             "post": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "SessionAuth": []
                     }
                 ],
                 "description": "Создает новый мит с участниками",
@@ -180,7 +309,7 @@
             "get": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "SessionAuth": []
                     }
                 ],
                 "consumes": [
@@ -232,6 +361,11 @@
         },
         "/payment_methods": {
             "get": {
+                "security": [
+                    {
+                        "SessionAuth": []
+                    }
+                ],
                 "description": "Возвращает список всех платежных методов пользователя",
                 "consumes": [
                     "application/json"
@@ -271,6 +405,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "SessionAuth": []
+                    }
+                ],
                 "description": "Создает новый платежный метод для пользователя",
                 "consumes": [
                     "application/json"
@@ -323,6 +462,11 @@
         },
         "/payment_methods/{methodId}": {
             "put": {
+                "security": [
+                    {
+                        "SessionAuth": []
+                    }
+                ],
                 "description": "Обновляет существующий платежный метод пользователя",
                 "consumes": [
                     "application/json"
@@ -380,6 +524,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "SessionAuth": []
+                    }
+                ],
                 "description": "Удаляет платежный метод пользователя",
                 "consumes": [
                     "application/json"
@@ -430,6 +579,11 @@
         },
         "/user/{id}/payment_methods": {
             "get": {
+                "security": [
+                    {
+                        "SessionAuth": []
+                    }
+                ],
                 "description": "Возвращает список всех платежных методов пользователя",
                 "consumes": [
                     "application/json"
@@ -477,6 +631,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "SessionAuth": []
+                    }
+                ],
                 "description": "Создает новый платежный метод для пользователя",
                 "consumes": [
                     "application/json"
@@ -535,6 +694,11 @@
         },
         "/user/{id}/payment_methods/{methodId}": {
             "put": {
+                "security": [
+                    {
+                        "SessionAuth": []
+                    }
+                ],
                 "description": "Обновляет существующий платежный метод пользователя",
                 "consumes": [
                     "application/json"
@@ -598,6 +762,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "SessionAuth": []
+                    }
+                ],
                 "description": "Удаляет платежный метод пользователя",
                 "consumes": [
                     "application/json"
@@ -654,6 +823,11 @@
         },
         "/user/{id}/profile": {
             "put": {
+                "security": [
+                    {
+                        "SessionAuth": []
+                    }
+                ],
                 "description": "Обновляет профиль пользователя по переданному ID, если пользователь аутентифицирован и имеет доступ",
                 "consumes": [
                     "application/json"
@@ -752,7 +926,7 @@
         "billsplitter-monolith_internal_utils_http.ResponseID": {
             "type": "object",
             "properties": {
-                "id": {
+                "ID": {
                     "type": "integer"
                 }
             }
@@ -806,6 +980,95 @@
             "properties": {
                 "user": {
                     "$ref": "#/definitions/billsplitter-monolith_internal_domain_user.User"
+                }
+            }
+        },
+        "internal_transport_http_bill.Bill": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "created_by_user_id": {
+                    "type": "integer"
+                },
+                "currency": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
+                "event_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "participants": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/internal_transport_http_bill.Participant"
+                    }
+                },
+                "split_type": {
+                    "type": "string"
+                },
+                "total_amount": {
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_transport_http_bill.CreateBillRq": {
+            "type": "object",
+            "properties": {
+                "currency": {
+                    "type": "string"
+                },
+                "event_id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "participants": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/internal_transport_http_bill.ParticipantRq"
+                    }
+                },
+                "split_type": {
+                    "type": "string"
+                },
+                "total_amount": {
+                    "type": "integer"
+                }
+            }
+        },
+        "internal_transport_http_bill.Participant": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "member_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "internal_transport_http_bill.ParticipantRq": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "member_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -867,6 +1130,9 @@
         "internal_transport_http_meet.Member": {
             "type": "object",
             "properties": {
+                "ID": {
+                    "type": "integer"
+                },
                 "user_id": {
                     "type": "integer"
                 },
@@ -969,6 +1235,14 @@
                     "example": "johndoe"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "SessionAuth": {
+            "description": "Сессионный токен. Значение из /auth/login/telegram передавайте через Authorize -\u003e X-Session-ID header.",
+            "type": "apiKey",
+            "name": "X-Session-ID",
+            "in": "header"
         }
     }
 }
